    - bump gjs 1.39.0
    - bump clutter 1.15.90
    - bump mutter 3.11.91
  * debian/rules: add --enable-systemd when building on linux
  * Build-depend on libsystemd-journal-dev [linux-any] for the above.
  * Have quilt refresh patches.
  * Add build-dependency on libgnome-menu-3-dev
    - need GMenu-3.0.gir
  * Bump glib2.0 build-dependency to 2.39.90 
    - code uses new g_app_info_monitor*

 -- Andreas Henriksson <andreas@fatal.se>  Thu, 06 Mar 2014 00:07:01 +0100

gnome-shell (3.10.1-1) experimental; urgency=low

  [ Sjoerd Simons ]
  * New upstream release
  * debian/patches/11-no-gettext.patch
    + Removed, fixed upstream
  * debian/patches/git_relock_screen_after_crash.patch
    + Removed, fixed upstream
  * debian/patches/revert-suspend-break.patch
    + Removed, our systemd-logind is new enough these days
  * debian/patches/10-make-NetworkManager-optional.patch
    debian/patches/27-nm-libexec-path.patch
    debian/patches/40_change-pam-name-to-match-gdm.patch
    + Refreshed
  * debian/control.in: Sync b-depends and debians from Ubuntus gnome3-teams
    packaging
  * debian/patches/10-make-NetworkManager-optional.patch
    + Temporarily disabled as it breaks gnome-shell currently

  [ Laurent Bigonville ]
  * debian/control.in:
    - Demote gdm3 Depends to Recommends, if gdm is not installed gnome-shell
      will not be able to lock the screen (Closes: #727558)
    - Add Depends against gir1.2-gdm3

  [ Sjoerd Simons ]
  * debian/gnome-shell-common.dirs: Create an empty
    /usr/share/gnome-shell/modes to work around bgo#709313

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 01 Nov 2013 23:03:15 +0100

gnome-shell (3.8.4-4) unstable; urgency=low

  [ Petr Salinger ]
  * Restrict dependency on gir1.2-nmgtk-1.0 to linux-any (Closes: #726099)

  [ Emilio Pozuelo Monfort ]
  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 13 Oct 2013 17:47:35 +0200

gnome-shell (3.8.4-3) experimental; urgency=low

  * debian/rules: