@@ -11,7 +11,7 @@ Build-Depends: autotools-dev,
                gnome-control-center-dev (>= 3.4),
                gnome-pkg-tools (>= 0.11),
                gobject-introspection (>= 1.29.15),
-               gsettings-desktop-schemas-dev (>= 3.9.0),
+               gsettings-desktop-schemas-dev (>= 3.11),
                gtk-doc-tools,
                intltool (>= 0.26),
                libatk-bridge2.0-dev,
@@ -66,7 +66,7 @@ Depends: ${gir:Depends},
          gir1.2-accountsservice-1.0,
          gir1.2-atspi-2.0 (>= 2.9.91),
          gir1.2-caribou-1.0 (>= 0.4.8),
-         gir1.2-clutter-1.0 (>= 1.11.11),
+         gir1.2-clutter-1.0 (>= 1.17),
          gir1.2-freedesktop,
          gir1.2-gcr-3 (>= 3.7.5),
          gir1.2-gkbd-3.0,
@@ -89,7 +89,7 @@ Depends: ${gir:Depends},
          gnome-settings-daemon (>= 3.4.0),
          gnome-shell-common (= ${source:Version}),
          gnome-themes-standard,
-         gsettings-desktop-schemas (>= 3.9.0),
+         gsettings-desktop-schemas (>= 3.11),
          python (>= 2.6),
          telepathy-mission-control-5,
 Recommends: gkbd-capplet,
