@@ -19,6 +19,10 @@ gnome-shell (3.11.91-1) UNRELEASED; urgency=low
     - need GMenu-3.0.gir
   * Bump glib2.0 build-dependency to 2.39.90 
     - code uses new g_app_info_monitor*
+  * Bump gsettings-desktop-schemas {build-,}dependency to 3.11
+    - needs new key at runtime
+  * Bump gir1.2-clutter-1.0 dependency to 1.17
+    - needs Clutter.GestureTriggerEdge
 
  -- Andreas Henriksson <andreas@fatal.se>  Thu, 06 Mar 2014 00:07:01 +0100
 
